--- a/css/general.css
+++ b/css/general.css
@@ -42,8 +42,7 @@ h3.aside_title {
 }
 
 .aside_contact div a {
-	color: #FFFFFF;
-	opacity: 0.5;
+	color: orange;
 }
 .aside_contact  div span {
 	color: #fff;
