--- a/css/general.css
+++ b/css/general.css
@@ -242,7 +242,9 @@ img {
 	font-size: 0.75rem;
 }
 
-
+.phoneCont {
+	margin-bottom:10px;
+}
 /* section Education end */
 
 /* main container end */
